k3s/argocd/noted.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noted
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: noted
  template:
    metadata:
      labels:
        app: noted
    spec:
      containers:
        - name: noted
          # TODO: config 1/7
          image: gerhard/noted:2021-06-18T13.23.10Z
          ports:
            - name: phoenix
              containerPort: 4000
          resources:
            requests:
              cpu: 0.1
              memory: 128Mi
            limits:
              cpu: 1
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            periodSeconds: 10
            timeoutSeconds: 9
          startupProbe:
            httpGet:
              path: /
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            failureThreshold: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: noted
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: phoenix
  selector:
    app: noted
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: noted
spec:
  entryPoints:
    - web
    - websecure
  routes:
    # TODO: config 4/7
    - match: Host(`noted.k3s.gerhard.io`)
      kind: Rule
      services:
        - name: noted
          port: 4000
